--- a/style.css
+++ b/style.css
@@ -1,122 +1,146 @@
+@font-face {
+    font-family: montserrat;
+    src: url(Montserrat-Thin.ttf);
+}
 body {
+    font-family: montserrat;
     margin: 0px;
-    font-family: Helvetica;
+    background-color: #f6f6f6;
 }
-.body-div {
-    height: 2000px;
-    background-color: #f2f3f5;
-    display: grid;
-    grid-template-columns: 1fr 1280px 1fr;
-    grid-template-rows: 60px 550px 1fr 200px;
-}
-/*----------------------------------TABBAR----------------------------------*/
-.tabbar-div {
-    background-color: #e3e5e8;
-    grid-column: 1/4;
-    grid-row: 1/2;
-    display: grid;
-    grid-template-columns: 1fr 1280px 1fr;
-    grid-template-rows: 1fr;
-}
-.tabbar-button-div {
-    grid-column: 2/3;
-    display: grid;
-    grid-template-columns: 60px 1fr 150px;
-    grid-template-rows: 60px;
-}
-/*----------------LOGO----------------*/
-.lumisy-logo-out-div {
-    display: grid;
-    grid-template-columns: 5px 50px 5px;
-    grid-template-rows: 5px 50px 5px;
-}
-.lumisy-logo-in-div {
-    grid-column: 2/3;
-    grid-row: 2/3;
-}
-.lumisy-logo-img {
-    width: 50px;
-    height: 50px;
-}
-/*----------------TABBUTTONS----------------*/
-.tabbar-button-in-div {
+.MainDiv {
+    height: 100vh;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
+    grid-template-rows: 620px;
 }
-.button-paragraph {
-    font-size: 14.5pt;
+.MainNavDiv {
+    background-color: #232429;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    display: grid;
+    grid-template-columns: 1fr 1500px 1fr;
+    grid-template-rows: 70px 1fr;
+}
+.NavDiv {
+    padding-top: 17px;
+    grid-column: 1/4;
+    grid-row: 1/2;
+    font-weight: bold;
+    display: grid;
+    grid-template-columns: 1fr;
+    display: inline;
     text-align: center;
 }
-.tabbar-link {
+.NavLink {
     text-decoration: none;
-    font-weight: bold;
-    color: #23272a;
-    margin-left: 15px;
-    margin-right: 15px;
+    color: #f6f6f6;
+    margin-left: 30px;
+    margin-right: 30px;
+    font-size: 16pt;
 }
-.tabbar-link:hover {
+.NavLink:hover {
     text-decoration: underline;
 }
-/*----------------LUMISYBUTTONS----------------*/
-.tabbar-lumisy-button-in-div {
-    margin-top: 10px;
-    padding-top: 10px;
-}
-.tabbar-lumisy-button-link {
-    background-color: white;
-    text-align: center;
-    text-decoration: none;
-    color: #23272a;
-    font-weight: bold;
-    border-radius: 20px;
-    padding-top: 11px;
-    padding-bottom: 11px;
-    padding-left: 22px;
-    padding-right: 22px;
-    font-size: 14px;
-}
-/*----------------------------------INTRODUCTION----------------------------------*/
-.introduction-div {
-    background-color: #23272a;
-    grid-column: 1/4;
+.DescriptionDiv {
+    grid-column: 2/3;
     grid-row: 2/3;
+    display: grid;
+    grid-template-columns: 550px 6px 944px;
+    grid-template-rows: 100px 1fr 100px;
 }
-/*----------------------------------MAIN----------------------------------*/
-.main-div {
+.DescriptionPicture {
+    width: 100%;
+    grid-column: 1/2;
+}
+.DescriptionHyphen {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    background-color: #f6f6f6;
+}
+.DescriptionContainerDiv {
     grid-column: 3/4;
-    grid-row: 3/4;
+    grid-row: 2/3;
+    padding-left: 100px;
+    padding-top: 25px;
+    padding-right: 100px;
+    color: #f6f6f6;
 }
-/*----------------------------------WEBEND----------------------------------*/
-.webend-div {
-    background-color: #23272a;
-    grid-column: 1/4;
-    grid-row: 4/5;
+.DescriptionHeading {
+    font-size: 50pt;
+    font-weight: bolder;
 }
-@media (max-width: 1300px){
-    .body-div {
-        grid-template-columns: 0px 1fr 0px;
-    }
-    .tabbar-div {
-        grid-template-columns: 0px 1fr 0px;
-    }
+.DescriptionContent{
+    font-size: 23pt;
 }
-@media (max-width: 747px){
-    .body-div {
-        grid-template-rows: 210px;
+.DescriptionContentSpan {
+    font-weight: bold;
+}
+.DescriptionContentLink {
+    text-decoration: none;
+    color: #5865F2;
+    font-weight: bold;
+}
+.DescriptionContentLink:hover {
+    text-decoration: underline;
+}
+@media (max-width: 1500px) {
+    .MainDiv {
+        grid-template-rows: 1070px;
     }
-    .tabbar-button-div {
-        grid-template-columns: 60px 90px 1fr 150px 1fr 150px;
-        grid-template-rows: 60px 150px;
-    }
-    .tabbar-button-in-div {
-        display: grid;
+    .MainNavDiv {
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
-        grid-column: 4/5;
-        grid-row: 2/3;
     }
-    .tabbar-lumisy-button-div {
-        grid-column: 6/7;
+    .NavDiv {
+        grid-column: 1/2;
+    }
+    .DescriptionDiv {
+        grid-column: 1/2;
+        grid-template-columns: 1fr 550px 1fr;
+        grid-template-rows: 550px 1fr;
+    }
+    .DescriptionPicture {
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+    .DescriptionContainerDiv{
+        grid-column: 1/4;
+        grid-row: 2/3;
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+    .DescriptionHyphen {
+        background-color: transparent;
+    }
+}
+@media (max-width: 800px) {
+    .MainDiv {
+        grid-template-rows: 600px;
+    }
+    .MainNavDiv {
+        grid-template-rows: 200px 1fr;
+    }
+    .NavDiv {
+        display: grid;
+        text-align: right;
+    }
+    .DescriptionDiv {
+        grid-row: 1/3;
+        grid-column: 1/2;
+        grid-template-columns: 200px 1fr;
+        grid-template-rows: 200px 1fr;
+    }
+    .DescriptionPicture {
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    .DescriptionContainerDiv {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .DescriptionHeading {
+        font-size: 30pt;
+    }
+    .DescriptionContent{
+        font-size: 16pt;
     }
 }
